--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.15.0",
     "hbs": "~3.1.0",
     "mongoose": "^4.5.1",
+    "mongoose-findorcreate": "^1.0.1",
     "morgan": "~1.6.1",
     "multer": "^1.3.0",
     "nodemon": "^1.11.0",
